--- a/Hospital/src/View/HospitalView.form
+++ b/Hospital/src/View/HospitalView.form
@@ -51,7 +51,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="694" max="32767" attributes="0"/>
+          <Component id="jPanel1" pref="681" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -271,9 +271,9 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="txtOriginCity" pref="187" max="32767" attributes="0"/>
+                          <Component id="txtOriginCity" max="32767" attributes="0"/>
                           <Component id="txtTelephone" max="32767" attributes="0"/>
-                          <Component id="dateChooser" max="32767" attributes="0"/>
+                          <Component id="dateChooser" pref="187" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   </Group>
