--- a/Hospital/src/View/HospitalView.form
+++ b/Hospital/src/View/HospitalView.form
@@ -113,7 +113,7 @@
                     <Column editable="true" title="ID" type="java.lang.Integer"/>
                     <Column editable="true" title="Name" type="java.lang.String"/>
                     <Column editable="true" title="Last name" type="java.lang.String"/>
-                    <Column editable="true" title="Age" type="java.lang.Integer"/>
+                    <Column editable="false" title="Age" type="java.lang.Integer"/>
                     <Column editable="true" title="Gender" type="java.lang.String"/>
                     <Column editable="true" title="Hospital origin" type="java.lang.String"/>
                     <Column editable="true" title="Inscription" type="java.lang.Long"/>
@@ -224,18 +224,9 @@
                               <Component id="txtName" min="-2" pref="163" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                                      <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
+                              <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="txtAge" max="32767" attributes="0"/>
-                                  <Component id="combGender" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="combGender" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -308,8 +299,6 @@
                           <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtTutor" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtTelephone" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtAge" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
@@ -389,14 +378,6 @@
                 <Property name="text" type="java.lang.String" value="Date birth"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel8">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Ebrima" size="18" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="age"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JLabel" name="jLabel9">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -411,13 +392,6 @@
                   <Font name="Ebrima" size="18" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="telephone"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="txtAge">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="14" style="0"/>
-                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtTutor">
