--- a/Hospital/src/View/AddHospitalView.form
+++ b/Hospital/src/View/AddHospitalView.form
@@ -247,7 +247,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Ebrima" size="18" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="add new patient"/>
+                <Property name="text" type="java.lang.String" value="add new hospital"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddHospitalActionPerformed"/>
